[project]
name = "aitbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml==6.0.3",
    "numpy==2.4.0",
    "torch==2.9.1",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src" 
module-name = "aitbox.preprocessing.track.map_match"
